 - fix: regarding z-coordinate to tqmirror-variation, by Brad Stefanov
 - fix: regarding of priority in the post_falloff2-variation
 - fix: initialize width and height for new flames, by Rick Sidwell
 - slightly improved the speed when chosing a random variation (from within a random-flame-generator or Mutation)
 - removed the advanced code-editor (using jsyntaxpane-1.1.5), which was not properly working in
   Java 15 (and honestly,was never working very well).
   Accordingly, the properties tinaAdvancedCodeEditorColorFix, tinaAdvancedCodeEditorFontSize and tinaAdvancedCodeEditor
   where removed from the Preferences.
   Recommended Alternative: use Visual Studio Code for editing complex scripts (https://code.visualstudio.com/download)
 - removed the "Variations settings"-window which was superseeded by the new variation profiles

V6.22 (16.01.2021)
 - reduced flickering of the main preview
 - some internal optimizations
 - switched to Java 15 for the Steam version
 - display java version in the "System Information" dialog

V6.20 (10.01.2021)
 - improved the responsibility of the app (which also reduces "micro-freezes"). This will also slightly
   reduce "peak-rendering-performance", but this should not matter much
 - new snowflake_wf-variation (which utilizes the same algorithm (with the same params) as my online-snowflake-generator: http://overwhale.com/snowflake ,
   which is an implementation of the excellent paper "A local cellular model for snow crystal growth" by Clifford A. Reiter).
   Using this variation (similar to "dla_wf") you can create a bunch of interesting "organic" looking fractals,
   you may have a look at my gallery for inspiration: https://blog.overwhale.com/?page_id=5517
 - new SNOWFLAKE-dof-blur-shape (see the "Bokeh"-sub-tab at the "DOF/Bokeh"-Gtab)
 - minor optimizations of the user-interface for smaller resolutions at the "affine"-tab
 - new petal3D_apo variation by Rick Sidwell and Larry Berlin